<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_card_racing"
    android:padding="20dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detalles_del_coche"
            android:textColor="#FFD700"
            android:textSize="20sp"
            android:fontFamily="@font/racesport"
            android:layout_marginBottom="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/marca"
            android:inputType="textCapWords"
            android:textColor="#FFFFFF"
            android:textColorHint="#888888"
            android:background="@drawable/bg_edittext"
            android:fontFamily="@font/racingsansoneregular"
            android:layout_marginBottom="12dp"/>

        <EditText
            android:id="@+id/inputModelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/modelo"
            android:inputType="textCapWords"
            android:textColor="#FFFFFF"
            android:textColorHint="#888888"
            android:background="@drawable/bg_edittext"
            android:fontFamily="@font/racingsansoneregular"
            android:layout_marginBottom="12dp"/>

        <EditText
            android:id="@+id/inputAnio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ano"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textColorHint="#888888"
            android:background="@drawable/bg_edittext"
            android:fontFamily="@font/racingsansoneregular"
            android:layout_marginBottom="12dp"/>

        <EditText
            android:id="@+id/inputConsumo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/consumo_medio"
            android:inputType="numberDecimal"
            android:textColor="#FFFFFF"
            android:textColorHint="#888888"
            android:background="@drawable/bg_edittext"
            android:fontFamily="@font/racingsansoneregular"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipo_de_combustible"
            android:textColor="#FFD700"
            android:textSize="18sp"
            android:fontFamily="@font/racingsansoneregular"
            android:layout_marginBottom="6dp" />

        <Spinner
            android:id="@+id/spinnerCombustible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:spinnerMode="dropdown"
            android:padding="10dp"
            android:fontFamily="@font/racingsansoneregular"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="20dp"/>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <Button
                android:id="@+id/btnCancelar"
                android:text="@string/cancelar"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:backgroundTint="#444444"
                android:fontFamily="@font/racingsansoneregular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnGuardar"
                android:text="@string/guardar"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:backgroundTint="#FF0000"
                android:fontFamily="@font/racingsansoneregular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
