<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <!-- Tarjeta del formulario -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="36dp"
        android:layout_marginHorizontal="10dp"
        android:padding="20dp"
        app:cardBackgroundColor="#55FFFFFF"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Campo nombre -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:startIconDrawable="@drawable/ic_user"
                app:startIconTint="@android:color/black"

                app:boxStrokeColor="@android:color/black"
                app:boxBackgroundColor="#00FFFFFF"
                app:hintTextColor="@android:color/black"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nombreRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apodo"
                    android:fontFamily="@font/racingsansoneregular"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:padding="14dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo correo -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@android:color/black"

                app:boxStrokeColor="@android:color/black"
                app:boxBackgroundColor="#00FFFFFF"
                app:hintTextColor="@android:color/black"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo_electr_nico"
                    android:fontFamily="@font/racingsansoneregular"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:padding="14dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo contraseña -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@android:color/black"

                app:endIconMode="password_toggle"
                app:endIconTint="@android:color/black"
                app:boxStrokeColor="@android:color/black"
                app:boxBackgroundColor="#00FFFFFF"
                app:hintTextColor="@android:color/black"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contrase_a"
                    android:fontFamily="@font/racingsansoneregular"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:padding="14dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Confirmar contraseña -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:startIconDrawable="@drawable/ic_confirm"
                app:startIconTint="@android:color/black"

                app:endIconMode="password_toggle"
                app:endIconTint="@android:color/black"
                app:boxStrokeColor="@android:color/black"
                app:boxBackgroundColor="#00FFFFFF"
                app:hintTextColor="@android:color/black"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordConfirmRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmar_contrase_a"
                    android:fontFamily="@font/racingsansoneregular"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:padding="14dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Botón registrar -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/registrarse"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/racesport"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="#FFFFFF"
                app:cornerRadius="12dp"
                app:backgroundTint="#F82A0E"
                android:elevation="6dp"
                android:layout_marginBottom="12dp" />

            <ProgressBar
                android:id="@+id/registerProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:indeterminateTint="@android:color/white"
                style="?android:attr/progressBarStyleSmall"
                android:layout_marginBottom="16dp" />



        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
